exports[`module "adapter/http" #default() resolves with a request/response tuple 1`] = `
Array [
  Request {
    "defaultParams": Object {},
    "encrypted": false,
    "headers": Array [],
    "logger": Logger {
      "enabled": false,
      "filter": Object {
        "params": Array [],
      },
      "format": "text",
      "level": "WARN",
    },
    "method": "GET",
    "params": Object {},
    "url": Object {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "/posts",
      "params": Array [],
      "path": "/posts",
      "pathname": "/posts",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
  },
  Response {
    "end": [Function],
    "getHeader": [Function],
    "headers": Array [],
    "logger": Logger {
      "enabled": false,
      "filter": Object {
        "params": Array [],
      },
      "format": "text",
      "level": "WARN",
    },
    "removeHeader": [Function],
    "send": [Function],
    "setHeader": [Function],
    "stats": Array [],
    "status": [Function],
    "statusCode": 200,
    "statusMessage": "OK",
  },
]
`;

exports[`module "adapter/http" #request #create() - with body builds a request object from an http.IncomingMessage 1`] = `undefined`;

exports[`module "adapter/http" #request #create() - without body builds a request object from an http.IncomingMessage 1`] = `Promise {}`;

exports[`module "adapter/http" #response #create() builds a response object from an http.ServerResponse 1`] = `
Response {
  "end": [Function],
  "getHeader": [Function],
  "headers": Array [],
  "logger": Logger {
    "enabled": false,
    "filter": Object {
      "params": Array [],
    },
    "format": "text",
    "level": "ERROR",
  },
  "removeHeader": [Function],
  "send": [Function],
  "setHeader": [Function],
  "stats": Array [],
  "status": [Function],
  "statusCode": 200,
  "statusMessage": "OK",
}
`;
